# fin-integrity-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fin_integrity/: __init__.py  client.py
tests/: test_client.py
