[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fin-integrity"
version = "0.1.0"
description = "Reconciliation-as-you-code — capture payment and ledger events and catch every mismatch."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "fin-integrity" }]
keywords = ["reconciliation", "fintech", "payments", "stripe", "ledger", "observability", "sdk"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/HatemSaadallah/fin-integrity-python"
Issues = "https://github.com/HatemSaadallah/fin-integrity-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fin_integrity"]
